--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* Controlling a-links colours in their different states */
+a {
+  color: white;
+}
+
+/* Unvisited link  */
+a:visited {
+  color: white;
+}
+
+/* Visited link    */
+a:hover {
+  color: black;
+}
+
+/* Mouse over link */
+a:active {
+  color: black;
+}
+
+#footerLink {
+  margin: 0px 5px;
+}
