Added note to CSS and added extra sizing on the stage for Konva otherwise it was not big enough to display the created shape (because it was 1:1

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ a:active {
   margin: 0px 5px;
 }
 
+/* Below is to hide for web accessibility  */
 span {
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(50%);
